--- a/en/7-beans-cafe-promo/415-7-beans-cafe-unlimited-cold-drink/index.html
+++ b/en/7-beans-cafe-promo/415-7-beans-cafe-unlimited-cold-drink/index.html
@@ -620,7 +620,7 @@
                     <div class="module-inner">
                         <div class="module-ct">
                             <iframe
-                                src="http://www.facebook.com/plugins/likebox.php?id=342860802908853&amp;width=235&amp;height=700&amp;connections=10&amp;stream=true&amp;header=true&amp;colorscheme=dark&amp;"
+                                src="//www.facebook.com/plugins/likebox.php?id=342860802908853&amp;width=235&amp;height=700&amp;connections=10&amp;stream=true&amp;header=true&amp;colorscheme=dark&amp;"
                                 scrolling="no" frameborder="0"
                                 style="overflow:hidden;width:235px;height:700px; allowTransparency: true;background-color:#333333"></iframe>
                         </div>
