--- a/en/7-beans-cafe-promo/416-7-beans-lucky-ampao/index.html
+++ b/en/7-beans-cafe-promo/416-7-beans-lucky-ampao/index.html
@@ -527,7 +527,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 
 		<!-- SIDEBAR 2 -->
 		<div class="t3-sidebar t3-sidebar-2 col-xs-6  col-md-3 ">
-			<div class="t3-module module " id="Mod189"><div class="module-inner"><div class="module-ct"><iframe src="http://www.facebook.com/plugins/likebox.php?id=342860802908853&amp;width=235&amp;height=700&amp;connections=10&amp;stream=true&amp;header=true&amp;colorscheme=dark&amp;" scrolling="no" frameborder="0" style="overflow:hidden;width:235px;height:700px; allowTransparency: true;background-color:#333333"></iframe></div></div></div>
+			<div class="t3-module module " id="Mod189"><div class="module-inner"><div class="module-ct"><iframe src="//www.facebook.com/plugins/likebox.php?id=342860802908853&amp;width=235&amp;height=700&amp;connections=10&amp;stream=true&amp;header=true&amp;colorscheme=dark&amp;" scrolling="no" frameborder="0" style="overflow:hidden;width:235px;height:700px; allowTransparency: true;background-color:#333333"></iframe></div></div></div>
 		</div>
 		<!-- //SIDEBAR 2 -->
 
