--- a/en/events-promos/room-promo/index.html
+++ b/en/events-promos/room-promo/index.html
@@ -851,7 +851,7 @@
                     <div class="module-inner">
                         <div class="module-ct">
                             <iframe
-                                src="http://www.facebook.com/plugins/likebox.php?id=1517690535119157&amp;width=235&amp;height=700&amp;connections=30&amp;stream=true&amp;header=true&amp;colorscheme=light&amp;"
+                                src="//www.facebook.com/plugins/likebox.php?id=1517690535119157&amp;width=235&amp;height=700&amp;connections=30&amp;stream=true&amp;header=true&amp;colorscheme=light&amp;"
                                 scrolling="no" frameborder="0"
                                 style="overflow:hidden;width:235px;height:700px; allowTransparency: true;"></iframe>
                         </div>
