--- a/en/location/index.html
+++ b/en/location/index.html
@@ -29,8 +29,8 @@
 
 <script type='text/javascript' src='http://maps.google.com.ph/maps/api/js?v=3&amp;language=en-GB&amp;libraries=places,weather,panoramio&amp;sensor=false'></script>
 <script src="/en/t3-assets/js/js-12e8e.js?t=705" type="text/javascript"></script>
-  <script src="http://www.google.com/jsapi?key=" type="text/javascript"></script>
-  <script src="http://www.google.com/uds/?file=earth&amp;v=1" type="text/javascript"></script>
+  <script src="//www.google.com/jsapi?key=" type="text/javascript"></script>
+  <script src="//www.google.com/uds/?file=earth&amp;v=1" type="text/javascript"></script>
   <script src="/en/t3-assets/js/js-da89d.js?t=705" type="text/javascript"></script>
   <script type="text/javascript">
 
