--- a/en/events-promos/index.html
+++ b/en/events-promos/index.html
@@ -24,14 +24,14 @@
     <link rel="stylesheet" href="/en/templates/ja_sugite/css/megamenu.css" type="text/css"/>
     <link rel="stylesheet" href="/en/templates/ja_sugite/css/off-canvas.css" type="text/css"/>
     <link rel="stylesheet" href="/en/templates/ja_sugite/fonts/font-awesome/css/font-awesome.min.css" type="text/css"/>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,700c"
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,700c"
           type="text/css"/>
     <link rel="stylesheet" href="/en/templates/ja_sugite/css/layouts/blog.css" type="text/css"/>
     <script src="/en/t3-assets/js/js-e74e4.js?t=204" type="text/javascript"></script>
     <script type="text/javascript">
 
         if (typeof (j2storeURL) == 'undefined') {
-            var j2storeURL = 'http://imerexplazahotel.com/en/';
+            var j2storeURL = '//imerexplazahotel.com/en/';
         }
 
         jQuery(window).on('load', function () {
@@ -344,11 +344,11 @@
 
             <!-- MAIN CONTENT -->
             <div id="t3-content" class="t3-content col-xs-12 col-md-6  col-md-push-3">
-                <div class="blog-featured" itemscope itemtype="http://schema.org/Blog">
+                <div class="blog-featured" itemscope itemtype="//schema.org/Blog">
 
                     <div class="items-leading clearfix">
                         <div class="leading leading-0"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -387,7 +387,7 @@
 
                     <div class="items-row cols-1 row-0 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -428,7 +428,7 @@
 
                     <div class="items-row cols-1 row-1 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -469,7 +469,7 @@
 
                     <div class="items-row cols-1 row-2 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -510,7 +510,7 @@
 
                     <div class="items-row cols-1 row-3 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -551,7 +551,7 @@
 <!--                    Page 2 -->
                     <div class="items-row cols-1 row-3 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -590,7 +590,7 @@
                     </div>
                     <div class="items-row cols-1 row-3 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -631,7 +631,7 @@
 
                     <div class="items-row cols-1 row-3 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -671,7 +671,7 @@
 
                     <div class="items-row cols-1 row-3 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -710,7 +710,7 @@
                     </div>
                     <div class="items-row cols-1 row-3 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -751,7 +751,7 @@
 <!--page 3 -->
                     <div class="items-row cols-1 row-3 row">
                         <div class="item column-1 col-sm-12"
-                             itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+                             itemprop="blogPost" itemscope itemtype="//schema.org/BlogPosting">
 
 
                             <!-- Article -->
@@ -803,46 +803,46 @@
                     <div class="module-inner"><h3 class="module-title "><span>Events & Promos</span></h3>
                         <div class="module-ct">
                             <ul class="latestnews">
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/events-promos/room-promo/421-banquet-space-for-lease" itemprop="url">
                                         <span itemprop="name">Banquet Space for Lease</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/events-promos/room-promo/420-mid-year-sale-2020" itemprop="url">
                                         <span itemprop="name">Mid-Year SALE 2020</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/events-promos/room-promo/419-graduation-promo-2020" itemprop="url">
                                         <span itemprop="name">Graduation Promo 2020</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/events-promos/bel-posto-ristorante/418-free-special-meal-for-graduates"
                                        itemprop="url">
                                         <span itemprop="name">Free Special Meal for Graduates</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo"
                                        itemprop="url">
                                         <span itemprop="name">The RoofTop Lucky Ampao Promo</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/7-beans-cafe-promo/416-7-beans-lucky-ampao" itemprop="url">
                                         <span itemprop="name">7 Beans Lucky Ampao</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/7-beans-cafe-promo/415-7-beans-cafe-unlimited-cold-drink"
                                        itemprop="url">
                                         <span itemprop="name">7 Beans Cafe Unlimited Cold Drink</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/7-beans-cafe-promo/414-7-beans-cafe-milk-tea" itemprop="url">
                                         <span itemprop="name">7 Beans Cafe Milk Tea </span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/7-beans-cafe-promo/413-7-beans-birthday-treat" itemprop="url">
                                         <span itemprop="name">7 Beans Birthday Treat</span></a>
                                 </li>
-                                <li itemscope itemtype="http://schema.org/Article">
+                                <li itemscope itemtype="//schema.org/Article">
                                     <a href="/en/7-beans-cafe-promo/412-7-beans-happy-hour" itemprop="url">
                                         <span itemprop="name">7 Beans Happy Hour</span></a>
                                 </li>
@@ -909,10 +909,10 @@
     <!-- BACK TOP TOP BUTTON -->
     <div id="back-to-top" data-spy="affix" data-offset-top="300" class="back-to-top hidden-xs hidden-sm affix-top">
         <button class="btn btn-primary" title="Back to Top"> <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'
-            'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+            '//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
             <svg height="20" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512"
-                 width="20" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:xlink="http://www.w3.org/1999/xlink"><polygon points="256.5,64.5 64.5,256.5 176.5,256.5 176.5,448.5 336.5,448.5 336.5,256.5 448.5,256.5 "/></svg></button>
+                 width="20" xml:space="preserve" xmlns="//www.w3.org/2000/svg"
+                 xmlns:xlink="//www.w3.org/1999/xlink"><polygon points="256.5,64.5 64.5,256.5 176.5,256.5 176.5,448.5 336.5,448.5 336.5,256.5 448.5,256.5 "/></svg></button>
     </div>
 
     <script type="text/javascript">
@@ -996,47 +996,47 @@
                         <div class="module-inner"><h3 class="module-title "><span>Events & Promos</span></h3>
                             <div class="module-ct">
                                 <ul class="latestnews">
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/events-promos/room-promo/421-banquet-space-for-lease"
                                            itemprop="url">
                                             <span itemprop="name">Banquet Space for Lease</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/events-promos/room-promo/420-mid-year-sale-2020" itemprop="url">
                                             <span itemprop="name">Mid-Year SALE 2020</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/events-promos/room-promo/419-graduation-promo-2020" itemprop="url">
                                             <span itemprop="name">Graduation Promo 2020</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/events-promos/bel-posto-ristorante/418-free-special-meal-for-graduates"
                                            itemprop="url">
                                             <span itemprop="name">Free Special Meal for Graduates</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo"
                                            itemprop="url">
                                             <span itemprop="name">The RoofTop Lucky Ampao Promo</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/7-beans-cafe-promo/416-7-beans-lucky-ampao" itemprop="url">
                                             <span itemprop="name">7 Beans Lucky Ampao</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/7-beans-cafe-promo/415-7-beans-cafe-unlimited-cold-drink"
                                            itemprop="url">
                                             <span itemprop="name">7 Beans Cafe Unlimited Cold Drink</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/7-beans-cafe-promo/414-7-beans-cafe-milk-tea" itemprop="url">
                                             <span itemprop="name">7 Beans Cafe Milk Tea </span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/7-beans-cafe-promo/413-7-beans-birthday-treat" itemprop="url">
                                             <span itemprop="name">7 Beans Birthday Treat</span></a>
                                     </li>
-                                    <li itemscope itemtype="http://schema.org/Article">
+                                    <li itemscope itemtype="//schema.org/Article">
                                         <a href="/en/7-beans-cafe-promo/412-7-beans-happy-hour" itemprop="url">
                                             <span itemprop="name">7 Beans Happy Hour</span></a>
                                     </li>
