--- a/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo/index.html
+++ b/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo/index.html
@@ -20,14 +20,14 @@
   <link rel="stylesheet" href="/en/templates/ja_sugite/css/megamenu.css" type="text/css" />
   <link rel="stylesheet" href="/en/templates/ja_sugite/css/off-canvas.css" type="text/css" />
   <link rel="stylesheet" href="/en/templates/ja_sugite/fonts/font-awesome/css/font-awesome.min.css" type="text/css" />
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,700c" type="text/css" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,700c" type="text/css" />
   <link rel="stylesheet" href="/en/modules/mod_dj_easy_contact/assets/mod_dj_easy_contact.css" type="text/css" />
   <link rel="stylesheet" href="/en/modules/mod_dj_easy_contact/assets/style3.css" type="text/css" />
   <script src="/en/t3-assets/js/js-02d40.js?t=396" type="text/javascript"></script>
   <script type="text/javascript">
 
 		if(typeof(j2storeURL) == 'undefined') {
-		var j2storeURL = 'http://imerexplazahotel.com/en/';
+		var j2storeURL = '//imerexplazahotel.com/en/';
 		}
 
 jQuery(window).on('load',  function() {
@@ -79,7 +79,7 @@ jQuery(window).on('load',  function() {
 						jQuery(input).val("");
 						jQuery("input[type='checkbox']").prop("checked", false);
 					});
-					jQuery(location).attr("href", "http://imerexplazahotel.com/en/2014-08-20-12-09-31");
+					jQuery(location).attr("href", "//imerexplazahotel.com/en/2014-08-20-12-09-31");
 				}else{
 					alert(response);
 				}
@@ -399,7 +399,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 										<dd class="category-name" title="Category: The RoofTop Promo">
 				<i class="fa fa-folder"></i>
 									<a href="/en/events-promos/the-rooftop">The RoofTop Promo</a>							</dd>
-										<dd class="createdby" itemprop="author" itemscope itemtype="http://schema.org/Person">
+										<dd class="createdby" itemprop="author" itemscope itemtype="//schema.org/Person">
 				<i class="fa fa-user"></i>
 									<span itemprop="name">Jerome Quizon</span>							</dd>
 								<dd class="published" title="Published: 27 Jan 2020">
@@ -457,43 +457,43 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 		<!-- SIDEBAR 1 -->
 		<div class="t3-sidebar t3-sidebar-1 col-xs-6  col-md-3  col-md-pull-6 ">
 			<div class="t3-module module " id="Mod183"><div class="module-inner"><h3 class="module-title "><span>Events & Promos</span></h3><div class="module-ct"><ul class="latestnews">
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/room-promo/421-banquet-space-for-lease" itemprop="url">
 			<span itemprop="name">Banquet Space for Lease</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/room-promo/420-mid-year-sale-2020" itemprop="url">
 			<span itemprop="name">Mid-Year SALE 2020</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/room-promo/419-graduation-promo-2020" itemprop="url">
 			<span itemprop="name">Graduation Promo 2020</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/bel-posto-ristorante/418-free-special-meal-for-graduates" itemprop="url">
 			<span itemprop="name">Free Special Meal for Graduates</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo" itemprop="url">
 			<span itemprop="name">The RoofTop Lucky Ampao Promo</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/416-7-beans-lucky-ampao" itemprop="url">
 			<span itemprop="name">7 Beans Lucky Ampao</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/415-7-beans-cafe-unlimited-cold-drink" itemprop="url">
 			<span itemprop="name">7 Beans Cafe Unlimited Cold Drink</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/414-7-beans-cafe-milk-tea" itemprop="url">
 			<span itemprop="name">7 Beans Cafe Milk Tea </span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/413-7-beans-birthday-treat" itemprop="url">
 			<span itemprop="name">7 Beans Birthday Treat</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/412-7-beans-happy-hour" itemprop="url">
 			<span itemprop="name">7 Beans Happy Hour</span></a>
 	</li>
@@ -501,7 +501,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 </div></div></div><div class="t3-module module " id="Mod191"><div class="module-inner"><h3 class="module-title "><span>Contact Us</span></h3><div class="module-ct">
 
 			<div class="dj-simple-contact-form style-3  email-field-active badge-bottomleft">
-				<form class="easy-contact-form form-validate disabled-captcha" id="dj-easy-contact-form-191" action="http://imerexplazahotel.com/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo" method="post">
+				<form class="easy-contact-form form-validate disabled-captcha" id="dj-easy-contact-form-191" action="//imerexplazahotel.com/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo" method="post">
 					<span class="dj-simple-contact-form-introtext"></span>
 
 
@@ -535,7 +535,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 			</div>
 
 </div></div></div><div class="t3-module module " id="Mod193"><div class="module-inner"><h3 class="module-title "><span>The RoofTop Bar Promo</span></h3><div class="module-ct"><ul class="latestnews">
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo" itemprop="url">
 			<span itemprop="name">The RoofTop Lucky Ampao Promo</span></a>
 	</li>
@@ -564,10 +564,10 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 <!-- BACK TOP TOP BUTTON -->
 <div id="back-to-top" data-spy="affix" data-offset-top="300" class="back-to-top hidden-xs hidden-sm affix-top">
   <button class="btn btn-primary" title="Back to Top"> <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'
-            'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+            '//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
             <svg height="20" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512"
-                 width="20" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:xlink="http://www.w3.org/1999/xlink"><polygon points="256.5,64.5 64.5,256.5 176.5,256.5 176.5,448.5 336.5,448.5 336.5,256.5 448.5,256.5 "/></svg></button>
+                 width="20" xml:space="preserve" xmlns="//www.w3.org/2000/svg"
+                 xmlns:xlink="//www.w3.org/1999/xlink"><polygon points="256.5,64.5 64.5,256.5 176.5,256.5 176.5,448.5 336.5,448.5 336.5,256.5 448.5,256.5 "/></svg></button>
 </div>
 
 <script type="text/javascript">
@@ -617,43 +617,43 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 							</div>
 					<div class=" col-lg-4 col-md-4 col-sm-6 col-xs-12">
 								<div class="t3-module module " id="Mod181"><div class="module-inner"><h3 class="module-title "><span>Events & Promos</span></h3><div class="module-ct"><ul class="latestnews">
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/room-promo/421-banquet-space-for-lease" itemprop="url">
 			<span itemprop="name">Banquet Space for Lease</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/room-promo/420-mid-year-sale-2020" itemprop="url">
 			<span itemprop="name">Mid-Year SALE 2020</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/room-promo/419-graduation-promo-2020" itemprop="url">
 			<span itemprop="name">Graduation Promo 2020</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/bel-posto-ristorante/418-free-special-meal-for-graduates" itemprop="url">
 			<span itemprop="name">Free Special Meal for Graduates</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/events-promos/the-rooftop/417-the-rooftop-lucky-ampao-promo" itemprop="url">
 			<span itemprop="name">The RoofTop Lucky Ampao Promo</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/416-7-beans-lucky-ampao" itemprop="url">
 			<span itemprop="name">7 Beans Lucky Ampao</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/415-7-beans-cafe-unlimited-cold-drink" itemprop="url">
 			<span itemprop="name">7 Beans Cafe Unlimited Cold Drink</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/414-7-beans-cafe-milk-tea" itemprop="url">
 			<span itemprop="name">7 Beans Cafe Milk Tea </span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/413-7-beans-birthday-treat" itemprop="url">
 			<span itemprop="name">7 Beans Birthday Treat</span></a>
 	</li>
-	<li itemscope itemtype="http://schema.org/Article">
+	<li itemscope itemtype="//schema.org/Article">
 		<a href="/en/7-beans-cafe-promo/412-7-beans-happy-hour" itemprop="url">
 			<span itemprop="name">7 Beans Happy Hour</span></a>
 	</li>
